--- a/views/templates.xml
+++ b/views/templates.xml
@@ -1,22 +1,61 @@
 <odoo>
     <data>
         <template id="medical_summary_template">
-          <ul>
-            <li t-foreach="objects" t-as="object">
-              <a t-attf-href="#{ root }/objects/#{ object.id }">
-                <t t-esc="object.display_name"/>
-              </a>
-            </li>
-          </ul>
-        </template>
-        <template id="object">
-          <h1><t t-esc="object.display_name"/></h1>
-          <dl>
-            <t t-foreach="object._fields" t-as="field">
-              <dt><t t-esc="field"/></dt>
-              <dd><t t-esc="object[field]"/></dd>
+            <t t-call="web.html_container">
+                <t t-call="web.external_layout">
+                    <div class="page" >
+                        <h3>MEDICAL AID SUMMARY REPORT</h3>
+                        <br/>
+
+                        <!-- dynamic variables here -->
+                        <t t-set="counter" t-value="0"/>
+
+                        <!-- table here -->
+                        <table class="table-sm table-striped">
+                            <thead>
+                                <tr>
+                                    <th/>
+                                    <th><b>Full Name</b></th>
+                                    <th><b>Start Date</b></th>
+                                    <th><b>End Date</b></th>
+                                    <th><b>Basic Pay</b></th>
+                                    <th><b>Employee Contribution</b></th>
+                                    <th><b>Employer Contribution</b></th>
+                                    <th><b>Total Contribution</b></th>
+                                </tr>
+
+                            </thead>
+
+                            <tbody>
+                                <t t-foreach="payslips" t-as="payslip">
+                                    <t t-set="counter" t-value="counter + 1"/>
+
+                                    <!-- we display our conversions -->
+                                    <tr>
+                                        <td t-esc="counter" />
+                                        <td t-esc="payslip['name']" class="text-bolder"/>
+                                        <td t-esc="payslip['date_from']"/>
+                                        <td t-esc="payslip['date_to']"/>
+                                        <td t-esc="payslip['basic']"/>
+                                        <td t-esc="payslip['employee']"/>
+                                        <td t-esc="payslip['employer']"/>
+                                        <td t-esc="payslip['total']"/>
+                                    </tr>
+
+                                </t>
+                                 <tr>
+                                    <td colspan="4" class="text-center"><b>PERIOD TOTALS <span><small>Rate = </small><small t-esc="rate"/></span></b></td>
+                                    <td t-esc="total_basic"/>
+                                    <td t-esc="total_employee_contribution"/>
+                                    <td t-esc="total_employer_contribution"/>
+                                    <td t-esc="total_total_contribution"/>
+                                 </tr>
+                            </tbody>
+
+                        </table>
+                    </div>
+                </t>
             </t>
-          </dl>
         </template>
     </data>
 </odoo>
