--- a/views/views.xml
+++ b/views/views.xml
@@ -1495,7 +1495,7 @@ def print_report():
     values = []
 
     for payslip in payslips:
-        
+        run_date = payslip.create_date.date()        
         if payslip.employee_id.x_studio_grade:
             grade = payslip.employee_id.x_studio_grade
         else:
@@ -1725,6 +1725,7 @@ def print_report():
         'total_net_pay': total_net_pay,
         'total_overtime': total_overtime,
         'total_overtime': total_overtime_hours,
+        'pay_date': run_date,
         'payslips': values
     }
     return env.ref('template.action_report_long_detailed_period_summary_template').report_action(docids=payslips, data=data)
@@ -1948,16 +1949,18 @@ def make_calculations():
     bank_group = {}
     
     for payslip in payslips:
-    
+        run_date = payslip.create_date.date()    
         bank = payslip.employee_id.bank_account_id
         bank_name = "N/A"
         branch = ""
         account_number = ""
         net_pay = 0
 
-        if bank:
-            bank_name = bank.bank_name
-            acccount_number = bank.acc_number
+        if not bank:
+            continue # skip cash accounts
+
+        bank_name = bank.bank_name
+        acccount_number = bank.acc_number
 
         bank_group.setdefault(bank_name, [])
 
@@ -1985,7 +1988,7 @@ def make_calculations():
     data = {
         "total_pay": "%.2f" % total_net_pay,
         "payslips": bank_group,
-        "pay_date": payslip.create_date
+        "pay_date": run_date
     }
 
     return env.ref('template.action_report_bank_summary_template').report_action(docids=payslips, data=data)
@@ -2033,5 +2036,268 @@ action = make_calculations()
 
     <!-- ************************** END OF Bank Summary Report ********************************* -->     
 
+  <!--   THESE ARE THE VIEWS AND ACTIONS Cash Summary Report  -->
+  
+      <!-- report action -->
+      <record id="action_report_cash_summary_template" model="ir.actions.report">
+        <field name="name">Cash Summary</field>
+        <field name="model">hr.payslip</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">template.cash_summary_report_template</field>    
+        <field name="report_file">template.cash_summary_report_template</field>
+        <!-- <field name="paperformat_id" ref="template.paper_format_payroll_reports"/> -->
+        <field name="print_report_name">'Cash Summary' + time.strftime('%Y-%m-%d')</field>
+    </record>
+   
+    <!-- server actions here -->
+    <record model="ir.actions.server" id="action_server_cash_summary">
+      <field name="name">Print Cash Summary</field>
+      <field name="model_id" ref="__export__.ir_model_445_508d9692"/>
+      <field name="state">code</field>
+      <field name="code">
+def make_calculations():
+    payslips = env["hr.payslip"].search([("payslip_run_id", "=", records[0].x_payroll_batch.id)])
+    exchange_rate_rule_parameter = env["hr.rule.parameter"].search([("code", "=", "EXCHANGE_RATE")])
+    exchange_rate_rule_value = env['hr.rule.parameter.value'].search([('rule_parameter_id', '=', exchange_rate_rule_parameter.id)], limit=1, order="date_from desc")
+    rate = float(exchange_rate_rule_value.parameter_value)
+    currency = records[0].x_reporting_currency
+   
+    
+    if(len(payslips) &lt; 1): raise UserError("The batch selected has no payslips.")
+    
+    total_net_pay = 0
+    
+    values = []
+    for payslip in payslips:
+        run_date = payslip.create_date.date()
+        net_pay = 0
+
+        if payslip.employee_id.bank_account_id:
+            continue # skip bank acounts
+
+        for line in payslip.line_ids:
+            if line.code == 'NET' or line.name == 'Net Salary USD':
+                if currency == "USD":
+                    net_pay += line.amount
+                if currency == "ZWL":
+                    net_pay += ( line.amount * rate )
+            if line.code == 'NET_ZWL' or line.name == 'Net Salary ZWL':
+                if currency == "USD":
+                    net_pay += ( line.amount / rate )
+                if currency == "ZWL":
+                    net_pay += line.amount 
+        
+        total_net_pay += net_pay                    
+        value = {
+            "name": payslip.employee_id.name,
+            "id_number": payslip.employee_id.identification_id,
+            "net_pay": "%.2f" % net_pay 
+        }
+        values.append(value)
+    
+    data = {
+        "rate": rate,
+        "currency": currency,
+        "total_pay": "%.2f" % total_net_pay,
+        "payslips": values,
+        "pay_date": run_date
+    }
+
+    return env.ref('template.action_report_cash_summary_template').report_action(docids=payslips, data=data)
+        
+action = make_calculations()
+
+      </field>
+    </record>
+
+
+    <!-- Views Here -->
+     <record model="ir.ui.view" id="cash_summary_report">
+      <field name="name">cash_summary_batch_select_view</field>
+      <field name="model">x_payroll_batch</field>
+      <field name="arch" type="xml">
+        <form string="Select Batch">
+          <sheet>
+            <group col="8">
+              <field name="x_payroll_batch" string="Payslip Batch"/>
+              <field name="x_reporting_currency" string="Reporting Currency"/>
+            </group>
+            <footer>
+              <button name="template.action_server_cash_summary" type="action" string="Print" class="btn-primary"/>
+              <button string="Cancel" special="cancel" class="btn-secondary"/>
+            </footer>
+          </sheet>
+        </form>
+      </field>
+    </record>
+
+    <!-- window actions -->
+    <record id="action_view_cash_summary" model="ir.actions.act_window">
+        <field name="name">Cash Summary</field>
+        <field name="res_model">x_payroll_batch</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+        <field name="view_id" ref="template.cash_summary_report"/>
+    </record>
+
+    <!-- Menu items go here -->
+    <menuitem name="Cash Summary" id="menu_cash_summary" parent="studio_customization.payroll_reports_4f6826a9-6a1c-4e3c-89ae-f9fc446404cd" sequence="100"
+    action="template.action_view_cash_summary"/>
+
+    
+
+    <!-- ************************** END OF Cash Summary Report ********************************* -->         
+
+
+  <!--   THESE ARE THE VIEWS AND ACTIONS Trade Union Report  -->
+  
+      <!-- report action -->
+      <record id="action_report_trade_union_template" model="ir.actions.report">
+        <field name="name">Trade Union</field>
+        <field name="model">hr.payslip</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">template.trade_union_report_template</field>    
+        <field name="report_file">template.trade_union_report_template</field>
+        <!-- <field name="paperformat_id" ref="template.paper_format_payroll_reports"/> -->
+        <field name="print_report_name">'Cash Summary' + time.strftime('%Y-%m-%d')</field>
+    </record>
+   
+    <!-- server actions here -->
+    <record model="ir.actions.server" id="action_server_trade_union">
+      <field name="name">Print Trade Union Summary</field>
+      <field name="model_id" ref="__export__.ir_model_445_508d9692"/>
+      <field name="state">code</field>
+      <field name="code">
+def make_calculations():
+    payslips = env["hr.payslip"].search([("payslip_run_id", "=", records[0].x_payroll_batch.id)])
+    exchange_rate_rule_parameter = env["hr.rule.parameter"].search([("code", "=", "EXCHANGE_RATE")])
+    exchange_rate_rule_value = env['hr.rule.parameter.value'].search([('rule_parameter_id', '=', exchange_rate_rule_parameter.id)], limit=1, order="date_from desc")
+    rate = float(exchange_rate_rule_value.parameter_value)
+    currency = records[0].x_reporting_currency
+   
+    
+    if(len(payslips) &lt; 1): raise UserError("The batch selected has no payslips.")
+    
+    total_net_pay = 0
+    total_trade_union = 0
+    total_trade_union_employer = 0
+    total_basic = 0
+    values = []
+    for payslip in payslips:
+        run_date = payslip.create_date.date()
+        basic = 0
+        net_pay = 0
+        tradeUnion = 0
+        tradeUnionEmployer = 0
+
+        # skip employees not registered to trade unions
+        if not payslip.employee_id.x_studio_union_affiliate:
+            continue 
+
+        for line in payslip.line_ids:
+            if line.code == 'BASIC' or line.name == 'Basic Salary':
+                if currency == "USD":
+                    basic += line.amount
+                if currency == "ZWL":
+                    basic += ( line.amount * rate )
+            if line.code == 'BASIC_ZWL' or line.name == 'Basic Salary ZWL':
+                if currency == "USD":
+                    basic += ( line.amount / rate )
+                if currency == "ZWL":
+                    basic += line.amount        
+
+            if line.code == 'TRADE_UNION' or line.name == 'Trade Union USD':
+                if currency == "USD":
+                    tradeUnion += line.amount
+                if currency == "ZWL":
+                    tradeUnion += ( line.amount * rate )
+            if line.code == 'TRADE_UNION_ZWL' or line.name == 'Trade Union ZWL':
+                if currency == "USD":
+                    tradeUnion += ( line.amount / rate )
+                if currency == "ZWL":
+                    tradeUnion += line.amount         
+                    
+            if line.code == 'TRADE_UNION_CC' or line.name == 'Trade Union Company Contribution USD':
+                if currency == "USD":
+                    tradeUnionEmployer += line.amount
+                if currency == "ZWL":
+                    tradeUnionEmployer += ( line.amount * rate )
+                    
+            if line.code == 'TRADE_UNION_CC_ZWL' or line.name == 'Trade Union Company Contribution ZWL':
+                if currency == "USD":
+                    tradeUnionEmployer += ( line.amount / rate )
+                if currency == "ZWL":
+                    tradeUnionEmployer += line.amount                         
+
+        total_trade_union += tradeUnion
+        total_trade_union_employer += tradeUnionEmployer
+        total_net_pay += net_pay       
+        total_basic += basic             
+        value = {
+            "name": payslip.employee_id.name,
+            "id_number": payslip.employee_id.identification_id,
+            "basic": basic,
+            "trade_union_employer": tradeUnionEmployer,
+            "trade_union": tradeUnion,
+            "net_pay": "%.2f" % net_pay 
+        }
+        values.append(value)
+
+    data = {
+        "rate": rate,
+        "currency": currency,
+        "total_basic": "%.2f" % total_basic,
+        "total_trade_union": "%.2f" % total_trade_union,
+        "total_trade_union_employer": "%.2f"  % total_trade_union_employer,
+        "payslips": values,
+        "pay_date": run_date
+    }
+    
+
+    return env.ref('template.action_report_trade_union_template').report_action(docids=payslips, data=data)
+        
+action = make_calculations()
+
+      </field>
+    </record>
+
+
+    <!-- Views Here -->
+     <record model="ir.ui.view" id="trade_union_report">
+      <field name="name">trade_union_batch_select_view</field>
+      <field name="model">x_payroll_batch</field>
+      <field name="arch" type="xml">
+        <form string="Select Batch">
+          <sheet>
+            <group col="8">
+              <field name="x_payroll_batch" string="Payslip Batch"/>
+              <field name="x_reporting_currency" string="Reporting Currency"/>
+            </group>
+            <footer>
+              <button name="template.action_server_trade_union" type="action" string="Print" class="btn-primary"/>
+              <button string="Cancel" special="cancel" class="btn-secondary"/>
+            </footer>
+          </sheet>
+        </form>
+      </field>
+    </record>
+
+    <!-- window actions -->
+    <record id="action_view_trade_union" model="ir.actions.act_window">
+        <field name="name">Trade Union</field>
+        <field name="res_model">x_payroll_batch</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+        <field name="view_id" ref="template.trade_union_report"/>
+    </record>
+
+    <!-- Menu items go here -->
+    <menuitem name="Trade Union" id="menu_trade_union" parent="studio_customization.payroll_reports_4f6826a9-6a1c-4e3c-89ae-f9fc446404cd" sequence="100"
+    action="template.action_view_trade_union"/>
+
+    
+
+    <!-- ************************** END OF Cash Summary Report ********************************* -->         
+    
 </data>
 </odoo>
