--- a/views/templates.xml
+++ b/views/templates.xml
@@ -479,15 +479,14 @@
                         <h5 class="col-2" t-esc="context_timestamp(datetime.datetime.now()).strftime('%Y-%m-%d')" />
                     </div>
                     <br/>
-                    
                     <div class="container">
                         <div class="row">
                             <!-- company info -->
                             <div class="col-10">
                                 <div class="row">
                                     <ul class="col-4" style="list-style: none;">
-                                        <li>Company Name   : <span t-esc="company"/></li>
-                                        <li>ITF16 Year     : <span t-esc="date_to"/></li>
+                                        <li>Company Name   : <span t-esc="company_name"/></li>
+                                        <li>ITF16 Period     : <i><span t-esc="period"/></i></li>
                                         <li>Contact Address: <span t-esc="details"/></li>
                                     </ul>
                                     <ul class="col-8" style="list-style: none;">
@@ -505,9 +504,11 @@
                         </div>
                     </div>
                     <!-- table here -->
+                    
+                    <t t-esc="batches"/>
                     <table class="table">
                         <t t-set="count" t-value="0"/>
-                        <thead>>
+                        <thead>
                             <th/>
                             <th>Name</th>
                             <th>ID Number</th>
@@ -526,40 +527,46 @@
 
                         </thead>
                         <tbody>
-                            <tbody>
-                                <t t-foreach="payslips" t-as="payslip">
-                                    <t t-set="count" t-value="count + 1"/>
-                                    <tr>
-                                        <td t-esc="count"/>
-                                        <td t-esc="name"/>
-                                        <td t-esc="id_number"/>
-                                        <td t-esc="date_of_birth"/>
-                                        <td t-esc="hire_date"/>
-                                        <td t-esc="contract_end"/>
-                                        <td t-esc="payslip['basic']"/>
-                                        <td t-esc="payslip['gross']"/>
-                                        <td t-esc="payslip['allowances']"/>
-                                        <td t-esc="payslip['pension']"/>
-                                        <td t-esc="payslip['nssa']"/>
-                                        <td t-esc="payslip['nec']"/>
-                                        <td t-esc="payslip['tax_credits']"/>
-                                        <td t-esc="payslip['paye']"/>
-                                        <td t-esc="payslip['aids_levy']"/>
-                                    </tr>
-                                </t>
+                            <!--<t t-esc="payslips"/>-->
+                            <t t-set="names" t-value="list(payslips.keys())"/>
+                            <t t-foreach="names" t-as="name">
+                                <!--<t t-esc="payslips[name]"/>-->
+                                <t t-set="count" t-value="count + 1"/>     
+                              
                                 <tr>
-                                    <td colspan="6">Period Totals</td>
-                                    <td t-esc="total_basic"/>
-                                    <td t-esc="total_gross"/>
-                                    <td t-esc="total_allowances"/>
-                                    <td t-esc="total_pension"/>
-                                    <td t-esc="nssa"/>
-                                    <td t-esc="nec"/>
-                                    <td t-esc="tax_credits"/>
-                                    <td t-esc="total_paye"/>
-                                    <td t-esc="total_aids_levy"/>
-                                </tr>
-                            </tbody>
+                                    <td t-esc="count"/>
+                                    <td t-esc="name"/>
+                                    <td t-esc="payslips[name]['id_number']"/>
+                                    <td t-esc="payslips[name]['date_of_birth']"/>
+                                    <td t-esc="payslips[name]['hire_date']"/>
+
+                                    <td t-if="payslips[name]['contract_end']"><span t-esc="payslips[name]['contract_end']"/></td>
+                                    <td t-else="">Not Assigned</td>
+
+                                    <td t-esc="payslips[name]['basic']" t-options='{"widget": "float", "precision": 2}'/>
+                                    <td t-esc="payslips[name]['gross']" t-options='{"widget": "float", "precision": 2}'/>
+                                    <td t-esc="payslips[name]['allowances']" t-options='{"widget": "float", "precision": 2}'/>
+                                    <td t-esc="payslips[name]['pension']" t-options='{"widget": "float", "precision": 2}'/>
+                                    <td t-esc="payslips[name]['nssa_nps']" t-options='{"widget": "float", "precision": 2}'/>
+                                    <td t-esc="payslips[name]['nec']" t-options='{"widget": "float", "precision": 2}'/>
+                                    <td t-esc="payslips[name]['tax_credits']" t-options='{"widget": "float", "precision": 2}'/>
+                                    <td t-esc="payslips[name]['paye']" t-options='{"widget": "float", "precision": 2}'/>
+                                    <td t-esc="payslips[name]['aids_levy']" t-options='{"widget": "float", "precision": 2}'/>
+                                </tr>                                    
+                                
+                            </t>
+                            <tr>
+                              <td colspan="6" class="text-center">Period Totals in <span t-esc="currency"/> <span><small>Rate = </small><small t-esc="rate"/></span></td>
+                              <td t-esc="total_basic"/>
+                              <td t-esc="total_gross"/>
+                              <td t-esc="total_allowances"/>
+                              <td t-esc="total_pension"/>
+                              <td t-esc="total_nssa"/>
+                              <td t-esc="total_nec"/>
+                              <td t-esc="total_tax_credits"/>
+                              <td t-esc="total_paye"/>
+                              <td t-esc="total_aids_levy"/>                              
+                            </tr>
                         </tbody>
                     
                     </table>
