--- a/views/views.xml
+++ b/views/views.xml
@@ -2324,88 +2324,110 @@ action = print_report()
         <field name="model_id" ref="__export__.ir_model_445_508d9692"/>
         <field name="state">code</field>
         <field name="code">
+
 def print_report():
 
-  # we get all the splips and exchange rate and currency
-  payslips = env['hr.payslip'].search([('payslip_run_id', '=', records[0].x_payroll_batch.id)])
-  exchange_rate_rule_parameter = env["hr.rule.parameter"].search([("code", "=", "EXCHANGE_RATE")])
-  exchange_rate_rule_value = env['hr.rule.parameter.value'].search([('rule_parameter_id', '=', exchange_rate_rule_parameter.id)], limit=1, order="date_from desc")
-
-  rate = float(exchange_rate_rule_value.parameter_value)
-  currency = records[0].x_reporting_currency or "USD"
-  start_date = payslips[0].date_from
-  end_date =  payslips[0].date_to
-
-  # some global variables
-  users = []
-  total_basic = 0
-  total_employee_nec = 0
-  total_employer_nec = 0
-
-  for payslip in payslips:
-    nec_employee = 0
-    nec_employer = 0
-    basic = 0
-
-    if currency == "USD":
-      for line in payslip.line_ids:
-        if line.name == "Basic Salary USD" or line.code == "BASIC":
-          basic += line.total
-        if line.name == "Basic Salary ZWL" or line.code == "BASIC_ZWL":
-          basic += ( line.total / rate )
-        if line.name == "Nec USD" or line.code == "NEC":
-          nec_employer += line.total
-        if line.name == "Nec ZWL" or line.code == "NEC_ZWL":
-          nec_employer += ( line.total / rate )
-        if line.name == "Nec Employee USD" or line.code == "NEC_EMPLOYEE":
-          nec_employee += line.total
-        if line.name == "Nec Employee ZWL" or line.code == "NEC_EMPLOYEE_ZWL":
-          nec_employee += ( line.total / rate )
-    if currency == "ZWL":
-      for line in payslip.line_ids:
-        if line.name == "Basic Salary USD" or line.code == "BASIC":
-          basic += line.total * rate
-        if line.name == "Basic Salary ZWL" or line.code == "BASIC_ZWL":
-          basic += line.total
-        if line.name == "Nec USD" or line.code == "NEC":
-          nec_employer += ( line.total * rate )
-        if line.name == "Nec ZWL" or line.code == "NEC_ZWL":
-          nec_employer += line.total
-        if line.name == "Nec Employee USD" or line.code == "NEC_EMPLOYEE":
-          nec_employee += ( line.total * rate )
-        if line.name == "Nec Employee ZWL" or line.code == "NEC_EMPLOYEE_ZWL":
-          nec_employee += line.total
-
-    users.append({
-      "name": payslip.employee_id.name,
-      "sdate": payslip.contract_id.date_start,
-      "edate": payslip.contract_id.date_end,
-      "grade": payslip.employee_id.x_studio_grade,
-      "basic": basic,
-      "employee": nec_employee,
-      "employer": nec_employer,
-      "total": nec_employee + nec_employer
-    })
-
-    total_employee_nec += nec_employee
-    total_employer_nec += nec_employer
-    total_basic += basic
-
-
-  real_data = {
-    "users": users,
-    "total_basic": total_basic,
-    "total_employee_nec": total_employee_nec,
-    "total_employer_nec": total_employer_nec,
-    "currency": currency,
-    "start_date": start_date,
-    "end_date": end_date,
-    "rate": rate
-  }
-
-  return env.ref('studio_customization.pay_slip_report_70f061a4-b84c-4b8c-93f5-c7c6b46713bf').report_action(payslips, real_data)
-
-action = print_report()
+    # we get all the splips and exchange rate and currency
+    payslips = env['hr.payslip'].search([('payslip_run_id', '=', records[0].x_payroll_batch.id)])
+    exchange_rate_rule_parameter = env["hr.rule.parameter"].search([("code", "=", "EXCHANGE_RATE")])
+    exchange_rate_rule_value = env['hr.rule.parameter.value'].search([('rule_parameter_id', '=', exchange_rate_rule_parameter.id)], limit=1, order="date_from desc")
+    
+    rate = float(exchange_rate_rule_value.parameter_value)
+    currency = records[0].x_reporting_currency
+    start_date = payslips[0].date_from
+    end_date =  payslips[0].date_to
+    
+    # some global variables
+    users = []
+    total_basic = 0
+    total_employee_nec = 0
+    total_employer_nec = 0
+    
+    for payslip in payslips:
+        nec_employee = 0
+        nec_employer = 0
+        basic = 0
+        
+        # if payslip.employee_id.x_studio_nec_affiliate:
+        #   continue
+        
+        if payslip.employee_id.x_studio_grade:
+            grade = payslip.employee_id.x_studio_grade
+        else:
+            grade = "N/A"
+        
+        if currency == "USD":
+            for line in payslip.line_ids:
+                if line.name == "Basic Salary USD" or line.code == "BASIC":
+                    basic += line.total
+                if line.name == "Basic Salary ZWL" or line.code == "BASIC_ZWL":
+                    basic += ( line.total / rate )
+                if line.name == "Nec USD" or line.code == "NEC":
+                    nec_employer += line.total
+                if line.name == "Nec ZWL" or line.code == "NEC_ZWL":
+                    nec_employer += ( line.total / rate )
+                if line.name == "Nec Employee USD" or line.code == "NEC_EMPLOYEE":
+                    nec_employee += line.total
+                if line.name == "Nec Employee ZWL" or line.code == "NEC_EMPLOYEE_ZWL":
+                    nec_employee += ( line.total / rate )
+        if currency == "ZWL":
+            for line in payslip.line_ids:
+                if line.name == "Basic Salary USD" or line.code == "BASIC":
+                    basic += line.total * rate
+                if line.name == "Basic Salary ZWL" or line.code == "BASIC_ZWL":
+                    basic += line.total
+                if line.name == "Nec USD" or line.code == "NEC":
+                    nec_employer += ( line.total * rate )
+                if line.name == "Nec ZWL" or line.code == "NEC_ZWL":
+                    nec_employer += line.total
+                if line.name == "Nec Employee USD" or line.code == "NEC_EMPLOYEE":
+                    nec_employee += ( line.total * rate )
+                if line.name == "Nec Employee ZWL" or line.code == "NEC_EMPLOYEE_ZWL":
+                    nec_employee += line.total
+        
+        
+        if payslip.contract_id.date_end:
+            end_date = payslip.contract_id.date_end
+        else:
+            end_date = "Date not Assigned"
+        
+        if payslip.contract_id.date_start:
+            start_date = payslip.contract_id.date_start
+        else:
+            start_date = "Date not Assigned"      
+            
+        users.append({
+        "name": payslip.employee_id.name,
+        "sdate": start_date,
+        "edate": end_date,
+        "grade": grade,
+        "basic": basic,
+        "employee": nec_employee,
+        "employer": nec_employer,
+        "total": nec_employee + nec_employer
+        })
+    
+        total_employee_nec += nec_employee
+        total_employer_nec += nec_employer
+        total_basic += basic
+    
+    
+    
+    real_data = {
+        "users": users,
+        "total_basic": total_basic,
+        "total_employee_nec": total_employee_nec,
+        "total_employer_nec": total_employer_nec,
+        "currency": currency,
+        "start_date": start_date,
+        "end_date": end_date,
+        "rate": rate
+    }
+    
+    return env.ref('template.action_report_NEC').report_action(payslips, real_data)
+    
+    action = print_report()
+        
       </field>
     </record>
 
